# Databases

./: README.md
ER-model/: Database11.accdb  Database11.laccdb
Lab1/: CMakeLists.txt  count.c  count.h  delete.c  delete.h  get.c  get.h  indexTable.c  indexTable.h  insert.c  insert.h  io.c  io.h  main.c  run.c  run.cpp  run.h  structures.c  structures.h  update.c  update.h
Lab2/: Database11.accdb  Database11.laccdb
SQL_task/: Database1.accdb
